<resources>
    <string name="app_name">Calorie Guide</string>

    <!-- Login page -->
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_an_account">Create an account</string>
    <string name="empty_username">Username must not be blank</string>
    <string name="empty_password">Password must not be blank</string>
    <string name="login_success">Welcome!</string>
    <string name="error_login">Incorrect username or password</string>

    <!-- Register page -->
    <string name="registration_title">Registration</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="birthday_label">Birthday</string>
    <string name="birthday_hint">DD.MM.YYYY.</string>
    <string name="gender_label">Gender</string>
    <string name="daily_calorie_limit_label">Daily calorie limit</string>
    <string name="error_daily_calorie_limit">Daily calorie limit is required</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="invalid_password">Password must be at least eight characters, have at least one uppercase letter, one lowercase letter, one number and one special character</string>
    <string name="invalid_confirm_password">Password do not match</string>
    <string name="error_username_already_exists">This username is already registered</string>
    <string name="register_success">Account created</string>
    <string-array name="genders_array">
        <item>Select your gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- Error messages -->
    <string name="error_unknown">Sorry something went wrong</string>
    <string name="error_no_network">No internet connection</string>
    <string name="token_expired">Session expired, you need to login again</string>
    <string name="error_item_not_found">Failed to find requested item. Make sure your list is refreshed.</string>
    <string name="error_user_not_found">This user was deleted. Make sure your user list is refreshed.</string>

    <!-- Home page -->
    <string name="home_label">Home</string>
    <string name="search_label">Search</string>
    <string name="calories_count">%d kcal</string>
    <string name="empty_food_list">No food entries found from this period</string>
    <string name="calorie_count_title">Calorie count</string>
    <string name="slash">/</string>

    <!-- Report page -->
    <string name="report_label">Report</string>

    <!-- Profile page -->
    <string name="profile_label">Profile</string>
    <string name="save_label">Save</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="delete_label">Delete</string>
    <string name="profile_updated_success">Profile successfully updated</string>
    <string name="delete_user_success">User is deleted</string>

    <!-- Delete decision dialog -->
    <string name="delete_dialog_title">Delete Account</string>
    <string name="delete_dialog_text">Are you sure you want to delete your account?</string>
    <string name="cancel_label">Cancel</string>
    <string name="dash">-</string>

    <!-- Add food dialog -->
    <string name="add_food_title">Add food entry</string>
    <string name="food_name_label">Food name</string>
    <string name="time_date_label">Time date</string>
    <string name="time_date_hint">HH:MM DD.MM.YYYY.</string>
    <string name="calories_label">Calories (kcal)</string>
    <string name="empty_food_name">Food name must not be blank</string>
    <string name="empty_time_date">Time date must be selected</string>
    <string name="empty_calories">Calorie count must be added</string>

    <!-- Update food dialog -->
    <string name="update_food_title">Update food entry</string>

    <!-- Users page -->
    <string name="users_label">Users</string>

    <!-- Report page -->
    <string name="food_entry_count_title">Food entry count</string>
    <string name="this_week_title">Last 7 days</string>
    <string name="last_week_title">Previous 7 days</string>
    <string name="users_average_calories_title">Average calories in last 7 days by user</string>
</resources>