<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/dialog_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_food_title"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text" />

        <TextView
            android:id="@+id/name_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/food_name_label"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/name"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            tools:text="Pizza" />

        <TextView
            android:id="@+id/time_date_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time_date_label"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/time_date"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/time_date_hint"
            app:layout_constraintTop_toBottomOf="@+id/time_date_label" />

        <TextView
            android:id="@+id/calories_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calories_label"
            app:layout_constraintTop_toBottomOf="@id/time_date" />

        <EditText
            android:id="@+id/calories"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/calories_label"
            tools:text="460" />

        <Button
            android:id="@+id/delete_button"
            style="@style/secondary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/delete_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calories" />

        <Button
            android:id="@+id/save_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calories" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>