<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.main.fragments.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/page_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/page_horizontal_margin">

        <TextView
            android:id="@+id/username_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_page_top_margin"
            android:text="@string/username_label"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/username_label"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            tools:text="MyUsername"/>

        <TextView
            android:id="@+id/first_name_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_field_vertical_margin"
            android:text="@string/first_name_label"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/first_name"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@+id/first_name_label" />

        <TextView
            android:id="@+id/last_name_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_field_vertical_margin"
            android:text="@string/last_name_label"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <EditText
            android:id="@+id/last_name"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@+id/last_name_label" />

        <TextView
            android:id="@+id/birthday_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_field_vertical_margin"
            android:text="@string/birthday_label"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <EditText
            android:id="@+id/birthday"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/birthday_hint"
            app:layout_constraintTop_toBottomOf="@+id/birthday_label" />

        <ImageView
            android:id="@+id/birthday_field_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/birthday"
            app:layout_constraintBottom_toBottomOf="@id/birthday"
            app:layout_constraintEnd_toEndOf="@id/birthday"
            android:background="@drawable/calendar"
            android:backgroundTint="@color/form_field_icon" />

        <TextView
            android:id="@+id/gender_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_field_vertical_margin"
            android:text="@string/gender_label"
            app:layout_constraintTop_toBottomOf="@+id/birthday" />

        <Spinner
            android:id="@+id/gender"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@+id/gender_label"
            tools:entries="@array/genders_array" />

        <ImageView
            android:id="@+id/gender_field_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/gender"
            app:layout_constraintBottom_toBottomOf="@id/gender"
            app:layout_constraintEnd_toEndOf="@id/gender"
            android:background="@drawable/chevron_down"
            android:backgroundTint="@color/form_field_icon" />

        <Button
            android:id="@+id/save_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:text="@string/save_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <Button
            android:id="@+id/sign_out_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/sign_out_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <Button
            android:id="@+id/delete_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="16dp"
            android:text="@string/delete_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_out_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:backgroundTint="@color/secondary_button_background" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>